--- a/MenzaPP/Web.config
+++ b/MenzaPP/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=MARKO-PC\MSSQLSERVER2016;Initial Catalog=Autorizacija;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ConnectionBaza" connectionString="Data Source=MARKO-PC\MSSQLSERVER2016;Initial Catalog=menzapp;Integrated Security=True" providerName="System.Data.SqlClient"/>
-    <add name="menzappEntities" connectionString="metadata=res://*/MenzappBaza.csdl|res://*/MenzappBaza.ssdl|res://*/MenzappBaza.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARKO-PC\MSSQLSERVER2016;initial catalog=menzapp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=ROKO;Initial Catalog=Autorizacija;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ConnectionBaza" connectionString="Data Source=ROKO;Initial Catalog=menzapp;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="menzappEntities" connectionString="metadata=res://*/MenzappBaza.csdl|res://*/MenzappBaza.ssdl|res://*/MenzappBaza.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ROKO;initial catalog=menzapp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
